[package]
name = "judge-controller"
version = "0.1.0"
authors = ["Southball <jamie.choi.mail.2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
clap = { git = "https://github.com/clap-rs/clap/" }
chrono = "0.4"
futures-executor = "0.3.4"
futures-util = "0.3.4"
jsonwebtoken = "7"
judge-definitions = { git = "https://github.com/southball/judge-definitions" }
lapin = "0.34.0"
log = "0.4"
reqwest = { version = "0.10", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
simplelog = "0.7.4"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
zip = "0.5.5"
zmq = "0.9"